--- a/assets/articles.css
+++ b/assets/articles.css
@@ -3,6 +3,11 @@
   background: var(--background-primary);
 }
 
+.articles > .articles__container {
+  padding-right: 0;
+  padding-left: 0;
+}
+
 .articles__wrapper--padding-top {
   padding-top: var(--padding-top-mobile, 0);
 }
@@ -21,11 +26,12 @@
   overflow-y: hidden;
   scroll-snap-type: x mandatory;
   scroll-snap-stop: always;
-  scroll-padding: 0;
+  scroll-padding: 0 var(--horizontal-padding-mobile);
   scroll-behavior: smooth !important;
   -ms-overflow-style: none;
   display: flex;
   gap: 16px;
+  margin: 0 calc(-1 * var(--horizontal-padding-mobile));
   scrollbar-width: none;
   scrollbar-color: transparent transparent;
 }
@@ -40,6 +46,27 @@
   scroll-snap-stop: always;
   color: var(--background-primary);
   background: var(--color-primary);
+  border-radius: var(--border-radius-rounded-blocks);
+}
+
+.articles__item:first-child {
+  margin-left: var(--horizontal-padding-mobile);
+}
+
+.articles__item:last-child {
+  margin-right: var(--horizontal-padding-mobile);
+}
+
+.articles__container .articles__wrapper .articles__top,
+.articles__container .articles__wrapper .articles__list {
+  padding-right: var(--horizontal-padding-mobile);
+  padding-left: var(--horizontal-padding-mobile);
+  margin: 0;
+}
+
+.articles__container .articles__wrapper .articles__item:first-child,
+.articles__container .articles__wrapper .articles__item:last-child {
+  margin: 0;
 }
 
 .articles__image-wrapper,
@@ -128,6 +155,8 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 1fr;
+    margin: 0;
+    scroll-padding: 0;
   }
 
   .articles__item {
@@ -135,6 +164,14 @@
     max-width: none;
     grid-template-rows: auto;
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .articles__item:first-child {
+    margin-left: 0;
+  }
+
+  .articles__item:last-child {
+    margin-right: 0;
   }
 
   .articles__image-wrapper,
@@ -201,6 +238,23 @@
     flex: 0 0 180px;
     max-width: 180px;
   }
+
+  .articles > .articles__container {
+    padding-right: var(--horizontal-padding-mobile);
+    padding-left: var(--horizontal-padding-mobile);
+  }
+
+  .articles__container .articles__wrapper {
+    border-radius: var(--border-radius-rounded-blocks);
+    padding-right: 16px;
+    padding-left: 16px;
+  }
+
+  .articles__container .articles__wrapper .articles__top,
+  .articles__container .articles__wrapper .articles__list {
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
 
 @media (min-width: 1100px) {
@@ -233,5 +287,17 @@
   .articles__list--5 .articles__item:first-child .articles__text-area,
   .articles__list--6 .articles__item:nth-child(3n + 1) .articles__text-area {
     padding: 5px 49px 37px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .articles > .articles__container {
+    padding-right: var(--horizontal-padding);
+    padding-left: var(--horizontal-padding);
+  }
+
+  .articles__container .articles__wrapper {
+    padding-right: 40px;
+    padding-left: 40px;
   }
 }
