--- a/assets/base.css
+++ b/assets/base.css
@@ -163,6 +163,10 @@ body .stretch > section:first-child{
   z-index: 1002 !important;
 }
 
+.header-transparent ~ #main:has(section:first-child > .container) {
+  padding-top: var(--header-height);
+}
+
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: var(--font-heading);
   font-weight: var(--font-weight-extrabold);
