--- a/assets/hero.css
+++ b/assets/hero.css
@@ -4,24 +4,42 @@
   position: relative;
   display: flex;
   align-items: stretch;
+  flex-grow: 1;
 }
 
 .hero__container {
   min-height: 515px;
   width: 100%;
-  display: flex;
-  flex-direction: column;
 }
 
-.hero__container--padding-top {
+.hero > .hero__container {
+  display: flex;
+}
+
+.hero__container .hero__wrapper {
+  padding-right: var(--horizontal-padding-mobile);
+  padding-left: var(--horizontal-padding-mobile);
+  overflow: hidden;
+  border-radius: var(--border-radius-rounded-blocks);
+  height: auto;
+}
+
+.hero__container > .hero__wrapper,
+.hero__wrapper > .hero__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.hero__wrapper--padding-top {
   padding-top: var(--padding-top-mobile, 0);
 }
 
-.header-transparent ~ main .hero:first-child .hero__container--padding-top {
+.header-transparent ~ main .hero:first-child > .hero__wrapper--padding-top {
   padding-top: calc(var(--padding-top-mobile, 0px) + var(--header-height, 110px) - var(--top-bar-height, 0px));
 }
 
-.hero__container--padding-bottom {
+.hero__wrapper--padding-bottom {
   padding-bottom: var(--padding-bottom-mobile, 0);
 }
 
@@ -33,7 +51,7 @@
   height: 100%;
   display: flex;
   justify-content: var(--text-justify-content-mobile);
-  align-items: var(--text-align-items-mobile);
+  align-items: center;
   text-align: var(--text-align-mobile);
   margin: 0 var(--margin-right-mobile) 0 var(--margin-left-mobile);
 }
@@ -144,23 +162,23 @@
 }
 
 @media (min-width: 992px) {
-  .hero__container {
+  .hero__wrapper {
     min-height: calc(var(--height, auto) - var(--header-height, 105px));
   }
 
-  .header-transparent ~ main .hero__container {
+  .header-transparent ~ main .hero__wrapper {
     min-height: calc(var(--height, auto) - var(--top-bar-height, 35px));
   }
 
-  .hero__container--padding-top {
+  .hero__wrapper--padding-top {
     padding-top: var(--padding-top, 0);
   }
 
-  .header-transparent ~ main .hero:first-child .hero__container--padding-top {
+  .header-transparent ~ main .hero:first-child > .hero__wrapper--padding-top {
     padding-top: calc(var(--padding-top, 0px) + var(--header-height, 110px) - var(--top-bar-height, 0px));
   }
 
-  .hero__container--padding-bottom {
+  .hero__wrapper--padding-bottom {
     padding-bottom: var(--padding-bottom, 0);
   }
 
@@ -189,7 +207,6 @@
 
   .hero__text-area {
     justify-content: var(--text-justify-content);
-    align-items: var(--text-align-items);
     text-align: var(--text-align);
     margin: 0 var(--margin-right) 0 var(--margin-left);
   }
@@ -208,6 +225,13 @@
   .hero__wrapper-full-height .hero__video {
     width: auto;
     height: 100%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .hero__container .hero__wrapper {
+    padding-right: var(--horizontal-padding);
+    padding-left: var(--horizontal-padding);
   }
 }
 
