Increasing image quality

--- a/sections/articles.liquid
+++ b/sections/articles.liquid
@@ -99,7 +99,7 @@
                   image: image,
                   loading: 'lazy',
                   class: 'articles__image',
-                  size: 'm'
+                  size: 'l'
                 -%}
               {%- endif -%}
             </div>
