--- a/assets/header.css
+++ b/assets/header.css
@@ -86,7 +86,7 @@
 .header__date-picker-wrapper {
   grid-area: column-2;
   position: absolute;
-  top: calc(100% + 16px);
+  top: calc(100% + 8px);
   left: 50%;
   width: calc(100vw - var(--horizontal-padding-mobile, 16px) * 2);
   transform: translate(-50%, 0);
@@ -395,6 +395,7 @@ body:has(#mobile-menu-opener:checked) .header-transparent .header__logo-inner:no
     width: auto;
     transform: translate(0, 0);
     padding: 0 10px;
+    margin: calc(-1 * var(--padding-top)) 0 calc(-1 * var(--padding-bottom));
     z-index: 0;
   }
 }
